tests/suite/snapshots/suite__check__tests__check__bad-procedure-return.xi.snap
---
source: tests/suite/check.rs
assertion_line: 35
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad-procedure-return.xi:3:12]
   │
 3 │     return foo()
   ·            ──┬──  
   ·              ╰──── Not a single expression type
───╯

